--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react-scripts": "0.9.5",
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
     "d3": "^4.12.2",
+    "jest-enzyme": "^4.0.2",
     "jwt-decode": "^2.2.0",
     "live-server": "^1.2.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-loading": "^1.0.2",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-spinkit": "^3.0.0",
-    "recharts": "^1.0.0-beta.9",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-thunk": "^2.2.0",
