--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^3.3.0",
     "react-scripts": "0.9.5",
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
     "d3": "^4.12.2",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jwt-decode": "^2.2.0",
     "live-server": "^1.2.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.2.0",
+    "react-d3-cloud": "^0.5.0",
+    "react-dom": "^16.2.0",
     "react-loading": "^1.0.2",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
